--- a/css/index.css
+++ b/css/index.css
@@ -2,9 +2,24 @@
 
 /* variables */
 :root {
-  --color-primary: #24b4d7;
-  --background-primary: #fff;
+  --primary: #24b4d7;
+  --secondary: #4dc4e1;
+  --purple: #918eec;
+  --white: #fff;
+  --color-primary: var(--primary);
+  --color-secondary: var(--secondary);
+  --color-purple: var(--purple);
+  --color-white: var(--white);
+  --background-primary: var(--primary);
+  --background-secondary: var(--secondary);
+  --background-purple: var(--purple);
+  --background-white: var(--white);
   --background-transparent: transparent;
+  --font-size-largest: calc(1rem * 2);
+  --font-size-larger: calc(1rem * 1.5);
+  --font-size-large: calc(1rem * 1.25);
+  --font-size-small: calc(1rem * 0.75);;
+  --font-size-smaller: calc(1rem * 0.5);;
   --font-weight-normal: 400;
   --font-weight-bold: 700;
   --line-height-normal: 1.5;
@@ -109,8 +124,8 @@ h6,
   -moz-user-select: none;
   user-select: none;
   border: none;
-  border-radius: 0.375rem;
-  background-color: var(--color-primary);
+  border-radius: 0.2rem;
+  background-color: var(--background-primary);
   transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out,
     border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
 }
@@ -122,6 +137,12 @@ h6,
 
 a.button {
   text-decoration: none;
+}
+
+/* footer */
+.footer {
+  height: 5.875rem;
+  background-color: #333;
 }
 
 /* header */
@@ -203,6 +224,57 @@ a.button {
 }
 
 /* --- modules --- */
+
+/* block */
+.block {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 1rem 1.25rem;
+  min-height: 5rem;
+  color: white;
+}
+
+/* contents */
+
+.section-landing {
+  height: 55.5rem;
+  background-image: url('../images/banr_snow.jpg');
+  background-repeat: no-repeat;
+  background-size: 100% auto;
+}
+
+.section-signup {
+  position: relative;
+  top: -3.5rem;
+  background-color: var(--background-transparent);
+}
+
+.section-learn-more {
+  height: 500px;
+  background-color: #fff;
+}
+
+.section-steps {
+  height: 500px;
+  background-image: linear-gradient(
+    135deg,
+    #50c3df 25%,
+    #24b4d7 25%,
+    #24b4d7 50%,
+    #50c3df 50%,
+    #50c3df 75%,
+    #24b4d7 75%,
+    #24b4d7 100%
+  );
+  background-size: 8.49px 8.49px;
+}
+
+.section-result {
+  height: 500px;
+  background-color: #fff;
+}
 
 /* grid */
 .container,
@@ -563,47 +635,6 @@ a.button {
   font-size: 1.75rem;
 }
 
-/* --- sections --- */
-
-.section-landing {
-  /* margin-top: -4.375rem; */
-  height: 55.5rem;
-  background-image: url('../images/banr_snow.jpg');
-  background-repeat: no-repeat;
-  background-size: 100% auto;
-}
-
-.section-learn-more {
-  height: 500px;
-  background-color: #fff;
-}
-
-.section-steps {
-  height: 500px;
-  background-image: linear-gradient(
-    135deg,
-    #50c3df 25%,
-    #24b4d7 25%,
-    #24b4d7 50%,
-    #50c3df 50%,
-    #50c3df 75%,
-    #24b4d7 75%,
-    #24b4d7 100%
-  );
-  background-size: 8.49px 8.49px;
-}
-
-.section-result {
-  height: 500px;
-  background-color: #fff;
-}
-
-/* footer */
-.footer {
-  height: 5.875rem;
-  background-color: #333;
-}
-
 /* --- utility --- */
 
 .flex {
@@ -676,4 +707,480 @@ a.button {
 
 .flex-grow {
   flex-grow: 1 !important;
+}
+
+.font-size-largest {
+  font-size: var(--font-size-largest);
+}
+
+.font-size-larger {
+  font-size: var(--font-size-larger);
+}
+
+.font-size-large {
+  font-size: var(--font-size-large);
+}
+
+.font-size-small {
+  font-size: var(--font-size-small);
+}
+
+.font-size-smaller {
+  font-size: var(--font-size-smaller);
+}
+
+.color-primary {
+  color: var(--color-primary);
+}
+
+.color-secondary {
+  color: var(--color-secondary);
+}
+
+.color-purple {
+  color: var(--color-purple);
+}
+
+.color-white {
+  color: var(--color-white);
+}
+
+.bg-primary {
+  background-color: var(--background-primary);
+}
+
+.bg-secondary {
+  background-color: var(--background-secondary);
+}
+
+.bg-purple {
+  background-color: var(--background-purple);
+}
+
+.bg-white {
+  background-color: var(--background-white);
+}
+
+.bg-transparent {
+  background-color: var(--background-transparent);
+}
+
+.p-0 {
+  padding: 0;
+}
+
+.p-1 {
+  padding: 0.25rem;
+}
+
+.p-2 {
+  padding: 0.5rem;
+}
+
+.p-3 {
+  padding: 1rem;
+}
+
+.p-4 {
+  padding: 1.5rem;
+}
+
+.p-5 {
+  padding: 2rem;
+}
+
+.p-6 {
+  padding: 2.5rem;
+}
+
+.px-0 {
+  padding-left: 0;
+  padding-right: 0;
+}
+
+.px-1 {
+  padding-left: 0.25rem;
+  padding-right: 0.25rem;
+}
+
+.px-2 {
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
+}
+
+.px-3 {
+  padding-left: 1rem;
+  padding-right: 1rem;
+}
+
+.px-4 {
+  padding-left: 1.5rem;
+  padding-right: 1.5rem;
+}
+
+.px-5 {
+  padding-left: 2rem;
+  padding-right: 2rem;
+}
+
+.px-6 {
+  padding-left: 2.5rem;
+  padding-right: 2.5rem;
+}
+
+.py-0 {
+  padding-top: 0;
+  padding-bottom: 0;
+}
+
+.py-1 {
+  padding-top: 0.25rem;
+  padding-bottom: 0.25rem;
+}
+
+.py-2 {
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+}
+
+.py-3 {
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+}
+
+.py-4 {
+  padding-top: 1.5rem;
+  padding-bottom: 1.5rem;
+}
+
+.py-5 {
+  padding-top: 2rem;
+  padding-bottom: 2rem;
+}
+
+.py-6 {
+  padding-top: 2.5rem;
+  padding-bottom: 2.5rem;
+}
+
+.pl-0 {
+  padding-left: 0;
+}
+
+.pl-1 {
+  padding-left: 0.25rem;
+}
+
+.pl-2 {
+  padding-left: 0.5rem;
+}
+
+.pl-3 {
+  padding-left: 1rem;
+}
+
+.pl-4 {
+  padding-left: 1.5rem;
+}
+
+.pl-5 {
+  padding-left: 2rem;
+}
+
+.pl-6 {
+  padding-left: 2.5rem;
+}
+
+.pr-0 {
+  padding-right: 0;
+}
+
+.pr-1 {
+  padding-right: 0.25rem;
+}
+
+.pr-2 {
+  padding-right: 0.5rem;
+}
+
+.pr-3 {
+  padding-right: 1rem;
+}
+
+.pr-4 {
+  padding-right: 1.5rem;
+}
+
+.pr-5 {
+  padding-right: 2rem;
+}
+
+.pr-6 {
+  padding-right: 2.5rem;
+}
+
+.pt-0 {
+  padding-top: 0;
+}
+
+.pt-1 {
+  padding-top: 0.25rem;
+}
+
+.pt-2 {
+  padding-top: 0.5rem;
+}
+
+.pt-3 {
+  padding-top: 1rem;
+}
+
+.pt-4 {
+  padding-top: 1.5rem;
+}
+
+.pt-5 {
+  padding-top: 2rem;
+}
+
+.pt-6 {
+  padding-top: 2.5rem;
+}
+
+.pb-0 {
+  padding-bottom: 0;
+}
+
+.pb-1 {
+  padding-bottom: 0.25rem;
+}
+
+.pb-2 {
+  padding-bottom: 0.5rem;
+}
+
+.pb-3 {
+  padding-bottom: 1rem;
+}
+
+.pb-4 {
+  padding-bottom: 1.5rem;
+}
+
+.pb-5 {
+  padding-bottom: 2rem;
+}
+
+.pb-6 {
+  padding-bottom: 2.5rem;
+}
+
+.m-0 {
+  margin: 0;
+}
+
+.m-1 {
+  margin: 0.25rem;
+}
+
+.m-2 {
+  margin: 0.5rem;
+}
+
+.m-3 {
+  margin: 1rem;
+}
+
+.m-4 {
+  margin: 1.5rem;
+}
+
+.m-5 {
+  margin: 2rem;
+}
+
+.m-6 {
+  margin: 2.5rem;
+}
+
+.mx-0 {
+  margin-left: 0;
+  margin-right: 0;
+}
+
+.mx-1 {
+  margin-left: 0.25rem;
+  margin-right: 0.25rem;
+}
+
+.mx-2 {
+  margin-left: 0.5rem;
+  margin-right: 0.5rem;
+}
+
+.mx-3 {
+  margin-left: 1rem;
+  margin-right: 1rem;
+}
+
+.mx-4 {
+  margin-left: 1.5rem;
+  margin-right: 1.5rem;
+}
+
+.mx-5 {
+  margin-left: 2rem;
+  margin-right: 2rem;
+}
+
+.mx-6 {
+  margin-left: 2.5rem;
+  margin-right: 2.5rem;
+}
+
+.my-0 {
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
+.my-1 {
+  margin-top: 0.25rem;
+  margin-bottom: 0.25rem;
+}
+
+.my-2 {
+  margin-top: 0.5rem;
+  margin-bottom: 0.5rem;
+}
+
+.my-3 {
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+}
+
+.my-4 {
+  margin-top: 1.5rem;
+  margin-bottom: 1.5rem;
+}
+
+.my-5 {
+  margin-top: 2rem;
+  margin-bottom: 2rem;
+}
+
+.my-6 {
+  margin-top: 2.5rem;
+  margin-bottom: 2.5rem;
+}
+
+.ml-0 {
+  margin-left: 0;
+}
+
+.ml-1 {
+  margin-left: 0.25rem;
+}
+
+.ml-2 {
+  margin-left: 0.5rem;
+}
+
+.ml-3 {
+  margin-left: 1rem;
+}
+
+.ml-4 {
+  margin-left: 1.5rem;
+}
+
+.ml-5 {
+  margin-left: 2rem;
+}
+
+.ml-6 {
+  margin-left: 2.5rem;
+}
+
+.mr-0 {
+  margin-right: 0;
+}
+
+.mr-1 {
+  margin-right: 0.25rem;
+}
+
+.mr-2 {
+  margin-right: 0.5rem;
+}
+
+.mr-3 {
+  margin-right: 1rem;
+}
+
+.mr-4 {
+  margin-right: 1.5rem;
+}
+
+.mr-5 {
+  margin-right: 2rem;
+}
+
+.mr-6 {
+  margin-right: 2.5rem;
+}
+
+.mt-0 {
+  margin-top: 0;
+}
+
+.mt-1 {
+  margin-top: 0.25rem;
+}
+
+.mt-2 {
+  margin-top: 0.5rem;
+}
+
+.mt-3 {
+  margin-top: 1rem;
+}
+
+.mt-4 {
+  margin-top: 1.5rem;
+}
+
+.mt-5 {
+  margin-top: 2rem;
+}
+
+.mt-6 {
+  margin-top: 2.5rem;
+}
+
+.mb-0 {
+  margin-bottom: 0;
+}
+
+.mb-1 {
+  margin-bottom: 0.25rem;
+}
+
+.mb-2 {
+  margin-bottom: 0.5rem;
+}
+
+.mb-3 {
+  margin-bottom: 1rem;
+}
+
+.mb-4 {
+  margin-bottom: 1.5rem;
+}
+
+.mb-5 {
+  margin-bottom: 2rem;
+}
+
+.mb-6 {
+  margin-bottom: 2.5rem;
 }
