--- a/css/index.css
+++ b/css/index.css
@@ -6,14 +6,20 @@
   --secondary: #4dc4e1;
   --purple: #918eec;
   --white: #fff;
+  --black: #000;
+  --gray: #333;
   --color-primary: var(--primary);
   --color-secondary: var(--secondary);
   --color-purple: var(--purple);
   --color-white: var(--white);
+  --color-black: var(--black);
+  --color-gray: var(--gray);
   --background-primary: var(--primary);
   --background-secondary: var(--secondary);
   --background-purple: var(--purple);
   --background-white: var(--white);
+  --background-black: var(--black);
+  --background-gray: var(--gray);
   --background-transparent: transparent;
   --font-size-largest: calc(1rem * 2);
   --font-size-larger: calc(1rem * 1.5);
@@ -41,7 +47,7 @@ html {
 }
 
 body {
-  background-color: #fff;
+  background-color: var(--background-white);
   line-height: 1.5;
 }
 
@@ -116,7 +122,7 @@ h6,
   font-size: 1rem;
   font-weight: var(--font-weight-normal);
   line-height: var(--line-height-normal);
-  color: white;
+  color: var(--color-white);
   text-align: center;
   text-decoration: none;
   vertical-align: middle;
@@ -143,7 +149,7 @@ a.button {
 /* footer */
 .footer {
   height: 5.875rem;
-  background-color: #333;
+  background-color: var(--background-gray);
 }
 
 /* header */
@@ -234,7 +240,55 @@ a.button {
   align-items: center;
   padding: 1rem 1.25rem;
   min-height: 5rem;
-  color: white;
+  color: var(--color-white);
+}
+
+/* card */
+.card {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  min-width: 0;
+  word-wrap: break-word;
+  background-color: var(--background-white);
+  background-clip: border-box;
+  border: none;
+  border-radius: 0;
+}
+
+.card-badge {
+  position: absolute;
+  top: 0;
+  left: 0;
+  padding: 0.25rem 0.5rem;
+  color: var(--color-white);
+  background-color: rgba(0, 0, 0, 0.5);
+}
+
+.card-img,
+.card-img-top {
+  width: 100%;
+  max-height: 12.5rem;
+}
+
+.card-title {
+  padding-left: 1rem;
+  padding-right: 1rem;
+  margin-top: 1.25rem;
+  margin-bottom: 1rem;
+  font-size: var(--font-size-large);
+}
+
+.card-body {
+  flex: 1 1 auto;
+  padding: 1rem;
+  color: var(--color-black);
+}
+
+.card-title + .card-body {
+  padding-top: 0;
+  margin-top: 0;
+  margin-bottom: 0;
 }
 
 /* contents */
@@ -257,7 +311,7 @@ a.button {
 }
 
 .section-learn-more {
-  background-color: #fff;
+  background-color: var(--background-white);
 }
 
 .section-learn-more > .container {
@@ -303,23 +357,41 @@ a.button {
 }
 
 .section-steps {
-  height: 500px;
   background-image: linear-gradient(
     135deg,
-    #50c3df 25%,
-    #24b4d7 25%,
-    #24b4d7 50%,
-    #50c3df 50%,
-    #50c3df 75%,
-    #24b4d7 75%,
-    #24b4d7 100%
+    var(--secondary) 25%,
+    var(--primary) 25%,
+    var(--primary) 50%,
+    var(--secondary) 50%,
+    var(--secondary) 75%,
+    var(--primary) 75%,
+    var(--primary) 100%
   );
   background-size: 8.49px 8.49px;
 }
 
+.section-steps h3 {
+  position: relative;
+}
+
+.section-steps h3::after {
+  position: absolute;
+  left: 2em;
+  bottom: -1rem;
+  width: 3rem;
+  height: 3px;
+  background-color: var(--background-black);
+  content: '';
+  transform: translateX(-50%);
+}
+
+.section-steps .card {
+  width: 22.5rem;
+}
+
 .section-result {
   height: 500px;
-  background-color: #fff;
+  background-color: var(--background-white);
 }
 
 /* grid */
@@ -571,7 +643,7 @@ a.button {
 
 @media (min-width: 1025px) {
   .container {
-    max-width: 960px;
+    max-width: 1200px;
   }
 
   .col-lg {
@@ -644,6 +716,26 @@ a.button {
   }
 }
 
+.grid {
+  display: grid;
+  grid-template-columns: repeat(12, 1fr);
+  grid-gap: 2rem;
+}
+
+/* .grid > .col:nth-child(-1n + 3) {
+  grid-column: span 4;
+} */
+
+/* .grid > .col:nth-last-child(2) {
+  grid-row-start: 2;
+  grid-column: 3 / span 4;
+}
+
+.grid > .col:nth-last-child(1) {
+  grid-row-start: 2;
+  grid-column: 7 / span 4;
+} */
+
 /* jumbo */
 .jumbo {
   padding: 5rem;
@@ -659,7 +751,7 @@ a.button {
     transparent 100%
   );
   background-size: 7.5px 7.5px;
-  color: #24b4d7;
+  color: var(--color-primary);
   font-weight: var(--font-weight-bold);
   letter-spacing: 0.2rem;
 }
