--- a/css/index.css
+++ b/css/index.css
@@ -370,6 +370,10 @@ th {
   max-width: 67rem;
 }
 
+.section-signup .block.w-fixed {
+  width: 300px !important;
+}
+
 .section-learn-more {
   background-color: var(--background-white);
 }
@@ -831,6 +835,40 @@ th {
 .jumbo > p {
   margin-top: 0;
   font-size: 1.75rem;
+}
+
+/* stepper */
+.stepper {
+  display: flex;
+  width: 100%;
+  height: 0.4rem;
+  overflow: hidden;
+  background-color: #ddd;
+}
+
+.stepper-bar {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  overflow: hidden;
+  background-color: #22a9ca;
+  /* transition: var(--bs-progress-bar-transition); */
+}
+
+.stepper + .stepper-progress {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  position: relative;
+  top: -0.8rem;
+}
+
+.stepper + .stepper-progress > .stepper-progress-step {
+  width: 0.4rem;
+  height: 0.4rem;
+  border: 0.4rem solid #22a9ca;
+  border-radius: 50%;
+  background-color: var(--background-white);
 }
 
 /* --- utility --- */
