--- a/css/index.css
+++ b/css/index.css
@@ -153,6 +153,7 @@ a.button {
 .footer {
   color: var(--color-white);
   background-color: var(--background-gray);
+  padding-bottom: 1rem;
 }
 
 /* header */
@@ -362,7 +363,7 @@ th {
 
 .section-signup {
   position: relative;
-  top: -3.5rem;
+  top: -6rem;
   background-color: var(--background-transparent);
 }
 
