--- a/css/index.css
+++ b/css/index.css
@@ -847,7 +847,23 @@ th {
   background-color: #ddd;
 }
 
-.stepper-bar {
+.stepper > .stepper-upper-text {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  width: 300px;
+  position: absolute;
+  left: 3rem;
+}
+
+.stepper > .stepper-upper-text > div {
+  position: absolute;
+  top: -1.8rem;
+  word-break: keep-all;
+  transform: translateX(-50%);
+}
+
+.stepper > .stepper-bar {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -856,20 +872,44 @@ th {
   /* transition: var(--bs-progress-bar-transition); */
 }
 
+.stepper > .stepper-lower-text {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  width: 300px;
+  position: absolute;
+  left: 3rem;
+}
+
+.stepper > .stepper-lower-text > div {
+  position: absolute;
+  top: 1rem;
+  word-break: keep-all;
+  transform: translateX(-50%);
+}
+
 .stepper + .stepper-progress {
   display: flex;
   flex-direction: row;
   justify-content: center;
-  position: relative;
-  top: -0.8rem;
+  width: 300px;
+  position: absolute;
+  left: 3rem;
 }
 
 .stepper + .stepper-progress > .stepper-progress-step {
+  position: absolute;
+  top: -0.6rem;
   width: 0.4rem;
   height: 0.4rem;
-  border: 0.4rem solid #22a9ca;
+  border: 0.4rem solid #ddd;
   border-radius: 50%;
   background-color: var(--background-white);
+  transform: translateX(-50%);
+}
+
+.stepper + .stepper-progress > .stepper-progress-step.active {
+  border: 0.4rem solid #22a9ca;
 }
 
 /* --- utility --- */
@@ -938,12 +978,8 @@ th {
   flex-wrap: wrap;
 }
 
-.flex-shrink {
-  flex-shrink: 1 !important;
-}
-
-.flex-grow {
-  flex-grow: 1 !important;
+.position-relative {
+  position: relative;
 }
 
 .font-size-largest {
@@ -1460,4 +1496,308 @@ th {
 
 .mb-6 {
   margin-bottom: 5rem;
+}
+
+.left-0 {
+  left: 0%;
+}
+.left-1 {
+  left: 1%;
+}
+.left-2 {
+  left: 2%;
+}
+.left-3 {
+  left: 3%;
+}
+.left-4 {
+  left: 4%;
+}
+.left-5 {
+  left: 5%;
+}
+.left-6 {
+  left: 6%;
+}
+.left-7 {
+  left: 7%;
+}
+.left-8 {
+  left: 8%;
+}
+.left-9 {
+  left: 9%;
+}
+.left-10 {
+  left: 10%;
+}
+.left-11 {
+  left: 11%;
+}
+.left-12 {
+  left: 12%;
+}
+.left-13 {
+  left: 13%;
+}
+.left-14 {
+  left: 14%;
+}
+.left-15 {
+  left: 15%;
+}
+.left-16 {
+  left: 16%;
+}
+.left-17 {
+  left: 17%;
+}
+.left-18 {
+  left: 18%;
+}
+.left-19 {
+  left: 19%;
+}
+.left-20 {
+  left: 20%;
+}
+.left-21 {
+  left: 21%;
+}
+.left-22 {
+  left: 22%;
+}
+.left-23 {
+  left: 23%;
+}
+.left-24 {
+  left: 24%;
+}
+.left-25 {
+  left: 25%;
+}
+.left-26 {
+  left: 26%;
+}
+.left-27 {
+  left: 27%;
+}
+.left-28 {
+  left: 28%;
+}
+.left-29 {
+  left: 29%;
+}
+.left-30 {
+  left: 30%;
+}
+.left-31 {
+  left: 31%;
+}
+.left-32 {
+  left: 32%;
+}
+.left-33 {
+  left: 33%;
+}
+.left-34 {
+  left: 34%;
+}
+.left-35 {
+  left: 35%;
+}
+.left-36 {
+  left: 36%;
+}
+.left-37 {
+  left: 37%;
+}
+.left-38 {
+  left: 38%;
+}
+.left-39 {
+  left: 39%;
+}
+.left-40 {
+  left: 40%;
+}
+.left-41 {
+  left: 41%;
+}
+.left-42 {
+  left: 42%;
+}
+.left-43 {
+  left: 43%;
+}
+.left-44 {
+  left: 44%;
+}
+.left-45 {
+  left: 45%;
+}
+.left-46 {
+  left: 46%;
+}
+.left-47 {
+  left: 47%;
+}
+.left-48 {
+  left: 48%;
+}
+.left-49 {
+  left: 49%;
+}
+.left-50 {
+  left: 50%;
+}
+.left-51 {
+  left: 51%;
+}
+.left-52 {
+  left: 52%;
+}
+.left-53 {
+  left: 53%;
+}
+.left-54 {
+  left: 54%;
+}
+.left-55 {
+  left: 55%;
+}
+.left-56 {
+  left: 56%;
+}
+.left-57 {
+  left: 57%;
+}
+.left-58 {
+  left: 58%;
+}
+.left-59 {
+  left: 59%;
+}
+.left-60 {
+  left: 60%;
+}
+.left-61 {
+  left: 61%;
+}
+.left-62 {
+  left: 62%;
+}
+.left-63 {
+  left: 63%;
+}
+.left-64 {
+  left: 64%;
+}
+.left-65 {
+  left: 65%;
+}
+.left-66 {
+  left: 66%;
+}
+.left-67 {
+  left: 67%;
+}
+.left-68 {
+  left: 68%;
+}
+.left-69 {
+  left: 69%;
+}
+.left-70 {
+  left: 70%;
+}
+.left-71 {
+  left: 71%;
+}
+.left-72 {
+  left: 72%;
+}
+.left-73 {
+  left: 73%;
+}
+.left-74 {
+  left: 74%;
+}
+.left-75 {
+  left: 75%;
+}
+.left-76 {
+  left: 76%;
+}
+.left-77 {
+  left: 77%;
+}
+.left-78 {
+  left: 78%;
+}
+.left-79 {
+  left: 79%;
+}
+.left-80 {
+  left: 80%;
+}
+.left-81 {
+  left: 81%;
+}
+.left-82 {
+  left: 82%;
+}
+.left-83 {
+  left: 83%;
+}
+.left-84 {
+  left: 84%;
+}
+.left-85 {
+  left: 85%;
+}
+.left-86 {
+  left: 86%;
+}
+.left-87 {
+  left: 87%;
+}
+.left-88 {
+  left: 88%;
+}
+.left-89 {
+  left: 89%;
+}
+.left-90 {
+  left: 90%;
+}
+.left-91 {
+  left: 91%;
+}
+.left-92 {
+  left: 92%;
+}
+.left-93 {
+  left: 93%;
+}
+.left-94 {
+  left: 94%;
+}
+.left-95 {
+  left: 95%;
+}
+.left-96 {
+  left: 96%;
+}
+.left-97 {
+  left: 97%;
+}
+.left-98 {
+  left: 98%;
+}
+.left-99 {
+  left: 99%;
+}
+.left-100 {
+  left: 100%;
 }
