--- a/css/index.css
+++ b/css/index.css
@@ -520,17 +520,13 @@ th {
 
 /* contents */
 .section-landing {
-  height: 55.5rem;
-  background-image: url('../images/banr_snow.jpg');
-  background-repeat: no-repeat;
-  background-size: 100% auto;
+  position: relative;
+  height: 39.375rem;
 }
 
-@media (max-width: 481px) {
+@media (min-width: 480px) {
   .section-landing {
-    height: 39.375rem;
-    background-size: auto 39.375rem;
-    background-position: 70% 50%;
+    height: 55.5rem;
   }
 }
 
@@ -1285,6 +1281,57 @@ th {
     margin-top: 0;
     font-size: 1.75rem;
   }
+}
+
+/* slider */
+.slider {
+  width: 100vw;
+  height: 39.375rem;
+  position: absolute;
+  overflow: hidden;
+}
+
+.slider > .slide {
+  opacity: 0;
+  width: 100vw;
+  height: 39.375rem;
+  background-position: center center;
+  background-size: cover;
+  position: absolute;
+  top: 0;
+  left: 0;
+  transition: 1s ease;
+  z-index: -1;
+}
+
+@media (min-width: 480px) {
+  .slider {
+    height: 55.5rem;
+  }
+
+  .slider > .slide {
+    height: 55.5rem;
+  }
+}
+
+.slide[data-slide='0'] {
+  background-image: url('../images/banr_ice.jpg');
+}
+
+.slide[data-slide='1'] {
+  background-image: url('../images/banr_mountain.jpg');
+}
+
+.slide[data-slide='2'] {
+  background-image: url('../images/banr_run.jpg');
+}
+
+.slide[data-slide='3'] {
+  background-image: url('../images/banr_snow.jpg');
+}
+
+.slider > .slide.active {
+  opacity: 1;
 }
 
 /* stepper */
