--- a/css/index.css
+++ b/css/index.css
@@ -1285,6 +1285,46 @@ th {
   }
 }
 
+/* lightbox */
+.lightbox {
+  display: none;
+  position: fixed;
+  z-index: 999;
+  top: 50%;
+  left: 50%;
+  width: 100%;
+  height: 100%;
+  padding: 1rem;
+  transform: translateX(-50%) translateY(-50%);
+}
+
+.lightbox::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.8);
+  z-index: 49;
+}
+
+.lightbox.show {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.lightbox iframe {
+  display: block;
+  width: 560px;
+  height: 315px;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: contain;
+  z-index: 50;
+}
+
 /* slider */
 .slider {
   width: 100vw;
@@ -2009,6 +2049,10 @@ th {
 
 .elevation-2 {
   box-shadow: 0px 0px 100px 0px rgba(0, 0, 0, 0.1);
+}
+
+.overflow-hidden {
+  overflow: hidden;
 }
 
 .left-0 {
