--- a/css/index.css
+++ b/css/index.css
@@ -135,6 +135,27 @@ h6,
   background-color: var(--background-transparent);
 }
 
+.button-fab {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: fixed;
+  bottom: 5rem;
+  right: 1rem;
+  z-index: 1;
+  width: 5rem;
+  height: 4.25rem;
+  border-radius: 0.25rem;
+  background-color: var(--background-gray);
+  opacity: 0.6;
+}
+
+@media (min-width: 480px) {
+  .button-fab {
+    right: 3.75rem;
+  }
+}
+
 a.button {
   text-decoration: none;
 }
